--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "natural-order",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "Lindsay Wardell",
-  "description": "Sort an array of strings or objects naturally.",
+  "description": "Sort an array of strings, numbers, or objects naturally.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
@@ -13,8 +13,16 @@
     "prepare": "npm run build",
     "preversion": "npm run lint"
   },
-  "keywords": [],
+  "keywords": [
+    "sort",
+    "order",
+    "natural"
+  ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lindsaykwardell/natural-order.git"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "jest": "^24.8.0",
