--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natural-order",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "author": "Lindsay Wardell",
   "description": "Sort an array of strings, numbers, or objects naturally.",
   "main": "lib/index.js",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
+    "@types/lodash.clonedeep": "^4.5.6",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.2.0",
@@ -33,5 +34,8 @@
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "dependencies": {
+    "lodash.clonedeep": "^4.5.0"
+  }
 }
