--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest --config jestconfig.json",
     "lint": "tslint ./src/index.ts",
     "build": "tsc",
+    "buildwp": "./node_modules/webpack/bin/webpack.js -p --config ./webpack/webpack.config.js;",
     "prepare": "npm run build",
     "preversion": "npm run lint"
   },
@@ -27,9 +28,12 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "jest": "^26.4.0",
     "ts-jest": "^26.2.0",
+    "ts-loader": "^8.0.2",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "files": [
     "lib/**/*"
