--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natural-order",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "author": "Lindsay Wardell",
   "description": "Sort an array of strings, numbers, or objects naturally.",
   "main": "lib/index.js",
@@ -10,7 +10,7 @@
     "lint": "tslint ./src/index.ts",
     "build": "tsc",
     "buildwp": "./node_modules/webpack/bin/webpack.js -p --config ./webpack/webpack.config.js;",
-    "prepare": "npm run build",
+    "prepare": "npm run build && npm run buildwp",
     "preversion": "npm run lint"
   },
   "keywords": [
