--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natural-order",
-  "version": "1.2.1",
+  "version": "2.0.0-rc.1",
   "author": "Lindsay Wardell",
   "description": "Sort an array of strings, numbers, or objects naturally.",
   "main": "lib/index.js",
