--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
   "name": "natural-order",
-  "version": "1.2.2",
+  "private": false,
+  "version": "2.0.1",
   "author": "Lindsay Wardell",
   "description": "Sort an array of strings, numbers, or objects naturally.",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/natural-order.es.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest --config jestconfig.json",
-    "lint": "tslint ./src/index.ts",
-    "build": "tsc",
-    "buildwp": "./node_modules/webpack/bin/webpack.js -p --config ./webpack/webpack.config.js;",
-    "prepare": "npm run build && npm run buildwp",
-    "preversion": "npm run lint"
+    "dev": "vitest --ui",
+    "test": "vitest --run",
+    "lint": "tsc --noEmit",
+    "prebuild": "npm run lint && npm test",
+    "build": "tsc && vite build",
+    "prepare": "npm run build"
+  },
+  "dependencies": {
+    "lodash.clonedeep": "^4.5.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/node": "^17.0.21",
+    "@vitest/ui": "^0.5.9",
+    "typescript": "^4.5.4",
+    "vite": "^2.8.0",
+    "vitest": "^0.5.9"
   },
   "keywords": [
     "sort",
@@ -22,24 +35,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/lindsaykwardell/natural-order.git"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.9",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "jest": "^26.4.0",
-    "ts-jest": "^26.2.0",
-    "ts-loader": "^8.0.2",
-    "ts-node": "^8.10.2",
-    "tslint": "^6.1.3",
-    "typescript": "^3.9.7",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
-  },
-  "files": [
-    "lib/**/*",
-    "dist/**/*"
-  ],
-  "dependencies": {
-    "lodash.clonedeep": "^4.5.0"
   }
 }
