--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^17.0.21",
     "@vitest/ui": "^0.5.9",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vitest": "^0.5.9"
